--- a/ui/libs/workflow-graph/src/lib/node/job-node.html
+++ b/ui/libs/workflow-graph/src/lib/node/job-node.html
@@ -3,7 +3,7 @@
     [class.inactive]="node?.run?.status === statusEnum.Skipped"
     [class.fail]="node?.run?.status === statusEnum.Fail || node?.run?.status === statusEnum.Stopped"
     [class.building]="node?.run?.status === statusEnum.Building || node?.run?.status === statusEnum.Waiting || node?.run?.status === statusEnum.Scheduling">
-    <span *ngIf="node?.gate && !node.event" class="gate" nz-icon nzType="play-circle" nzTheme="outline"
+    <span *ngIf="node?.gate && !runActive" class="gate" nz-icon nzType="play-circle" nzTheme="outline"
         title="Run job gate" (click)="clickRunGate($event)"></span>
     <div *ngIf="node?.name" class="name">
         {{node?.name}}
@@ -21,5 +21,11 @@
     </div>
     <div *ngIf="node?.run?.status" class="status">
         {{node?.run?.status.toLowerCase()}}
+    </div>
+    <div *ngIf="node && node.run" class="commands">
+        <button *ngIf="(node.run.status | isJobTerminated) && node.run.status !== 'Skipped' && !runActive" nz-button
+            nzGhost nzSize="small" (click)="clickRestart($event)">Restart</button>
+        <button *ngIf="!(node.run.status | isJobTerminated)" nz-button nzDanger nzType="primary" nzSize="small"
+            (click)="clickStop($event)">Stop</button>
     </div>
 </div>
