feat(ui,api): handle repository tags refs
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/libs/workflow-graph/src/lib/node/job-node.html
+++ b/ui/libs/workflow-graph/src/lib/node/job-node.html
@@ -31,7 +31,7 @@
             </button>
         </ng-container>
     </div>
-    <div *ngIf=" node?.name" class="name">
+    <div *ngIf="node?.name" class="name" title="{{node?.name}}">
         {{node?.name}}
     </div>
     <div *ngIf="duration" class="duration" nz-tooltip [nzTooltipTitle]="durationTooltip">
